# haragan

./: README.md  Setup.hs  haddockall.sh  haragan.cabal
common/Network/HTTP/Request/: Examples.hs
common/Network/HTTP/Response/: Examples.hs
data/database/: CATALOG.sql  DATABASE.dot  META.sql  PUBLIC.sql  SYNC.sql
data/web/css/jquery-ui/1.11.2/: jquery-ui.css  jquery-ui.min.css  jquery-ui.theme.min.css
data/web/html/: index.html  login.html
data/web/js/: jInvoice.js  jSwipeCard.js  jTable.js  jsMVC.js  quirks.js
docs/: UI.txt
main/: Echo.hs  Publisher.hs  Replicator.hs
src/: Database.hs
src/Database/: Business.hs  Internal.hs
src/Database/Business/: Method.hs  Subscriptions.hs
src/Database/Internal/: Catalog.hs  Meta.hs
src/Database/Schema/: Subscriptions.hs
src/Network/App/: CRM.hs  Post.hs  Table.hs
src/Network/HTTP/: Cookie.hs  Request.hs  Response.hs  Server.hs  Session.hs
src/Network/HTTP/Request/Parser/: Binary.hs
src/Network/HTTP/Response/Renderer/: Binary.hs  Builder.hs
src/Network/HTTP/Types/: Method.hs  Status.hs  Version.hs
src/Network/TCP/: Server.hs
src/Network/TCP/Server/: Internal.hs
testsuite/: runbenchmarks.sh  runtests.sh
testsuite/benchs/: Benchs.hs
testsuite/tests/: TestSuite.hs
testsuite/tests/Network/HTTP/Cookie/: Test.hs
testsuite/tests/Network/HTTP/Request/Parser/Binary/: Test.hs
testsuite/tests/Network/HTTP/Response/Renderer/Binary/: Test.hs
testsuite/tests/Network/HTTP/Session/: Test.hs
testsuite/tests/Network/TCP/Server/Internal/: Test.hs
